--- a/_config.yml
+++ b/_config.yml
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Sam Jiewen Lai"
-  avatar           : "profile.png"
-  bio              : "PhD candidate at The Hong Kong Polytechnic University"
-  location         : "Hong Kong, China"
+  name             :   "Sam Jiewen Lai"
+  avatar           :  "profile.png"
+  bio              :   "PhD candidate at The Hong Kong Polytechnic University"
+  location         :  "Hong Kong, China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=t77Gv8kAAAAJ&hl=en&oi=ao"
-  email            :
+  googlescholar    :  "https://scholar.google.com/citations?user=t77Gv8kAAAAJ&hl=en&oi=ao"
+  email            :  "jw.lai@connect.polyu.hk"
   researchgate     :  "https://www.researchgate.net/profile/Jiewen_Lai3"
   uri              :
   bitbucket        :
