--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             :   "Sam Jiewen Lai"
-  avatar           :  "profile.png"
+  avatar           :  "drawing.jpg"
   bio              :   "PhD candidate at The Hong Kong Polytechnic University"
   location         :  "Hong Kong, China"
   employer         :
