--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@ main:
   - title: "Talks"
     url: /talks/
     
- - title: "Academic Service"
-    url: /academic-service/  
+ - title: "Academic Services"
+    url: /academic-services/  
 
   - title: "Teaching"
     url: /teaching/    
