--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /talks/
     
  - title: "Academic Services"
-    url: /academic-services/  
+    url: /portfolio/  
 
   - title: "Teaching"
     url: /teaching/    
