--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Talks"
     url: /talks/
     
- - title: "Academic Services"
+ - title: "Portfolio"
     url: /portfolio/  
 
   - title: "Teaching"
