--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,6 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Resume"
-    url: /resume/
+  - title: "Academic Services"
+    url: /academic-services/
     
