--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Portfolio"
     url: /portfolio/
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Teaching Assistance"
+    url: /teaching-assistance/    
     
   - title: "Academic Services"
     url: /academic-services/
