--- a/_config.yml
+++ b/_config.yml
@@ -310,6 +310,6 @@ compress_html:
   ignore:
     envs: development
 
-# theme: jekyll-theme-slate
-theme: minimal-mistakes-jekyll
-minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+theme: jekyll-theme-slate
+#theme: minimal-mistakes-jekyll
+#minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
