--- a/_config.yml
+++ b/_config.yml
@@ -312,4 +312,4 @@ compress_html:
 
 theme: jekyll-theme-minimal
 #theme: minimal-mistakes-jekyll
-#minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
