--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    :  "https://scholar.google.com/citations?user=t77Gv8kAAAAJ&hl=en&oi=ao"
-  email            :  "jw.lai@connect.polyu.hk"
+  email            :  "jiewen.lai@polyu.edu.hk"
   researchgate     :  "https://www.researchgate.net/profile/Jiewen_Lai3"
   uri              :
   bitbucket        :
