--- a/_config.yml
+++ b/_config.yml
@@ -187,6 +187,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  post:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -267,6 +270,7 @@ plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-seo-tag
+  
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
