--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    :  "https://scholar.google.com/citations?user=t77Gv8kAAAAJ&hl=en&oi=ao"
   email            :  "jiewen.lai@polyu.edu.hk"
   researchgate     :  "https://www.researchgate.net/profile/Jiewen_Lai3"
-  uri              :
+  uri              :  "https://samlaipolyu.github.io"
   bitbucket        :
   codepen          :
   dribbble         :
@@ -102,7 +102,7 @@ author:
   instagram        : "samlai333"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/jiewen-lai/"
+  linkedin         : 
   orcid            : # "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
