--- a/_config.yml
+++ b/_config.yml
@@ -248,6 +248,15 @@ defaults:
       author_profile: true
       share: true
       
+   # _post
+  - scope:
+      path: ""
+      type: post
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      
 
 # Sass/SCSS
 sass:
