--- a/_config.yml
+++ b/_config.yml
@@ -194,10 +194,10 @@ collections:
 
 # Defaults
 defaults:
-  # _post
+  # _posts
   - scope:
       path: ""
-      type: post
+      type: posts
     values:
       layout: single
       author_profile: true
