--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,8 @@
 # main links links
 main:
+  - title: "Current Research"
+    url: /research/
+
   - title: "Publications"
     url: /publications/
 
